cap11-securitatea-cloud/aplicatia-5-kind/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aplicatie
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.37
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
