cap11-securitatea-cloud/aplicatia-5-kind/pod-sigur.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-sigur
  namespace: aplicatie
  labels:
    app: api-sigur
spec:
  automountServiceAccountToken: false
  securityContext:
    runAsNonRoot: true
    runAsUser: 1654
    seccompProfile:
      type: RuntimeDefault
  containers:
  - name: api
    image: api-sigur:1.0
    imagePullPolicy: Never
    ports:
    - containerPort: 8080
    securityContext:
      allowPrivilegeEscalation: false
      readOnlyRootFilesystem: true
      capabilities:
        drop: ["ALL"]
    resources:
      limits:
        memory: "256Mi"
        cpu: "500m"
    volumeMounts:
    - name: tmp
      mountPath: /tmp
  volumes:
  - name: tmp
    emptyDir:
      medium: Memory
      sizeLimit: 16Mi
